# anime-game-core

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  shell.nix
builtin/HDiffPatch/: README.md  hpatchz
src/: api.rs  check_domain.rs  consts.rs  curl.rs  downloader.rs  file_strings.rs  game.rs  lib.rs  locales.rs  repairer.rs  telemetry.rs  updater.rs  version.rs  version_detect.rs
src/archive/: entry.rs  mod.rs  sevenz.rs  stream.rs  tar.rs  updater.rs  zip.rs
src/archives/: mod.rs  sevenz.rs  tar.rs  updater.rs  zip.rs
src/builtin/: hpatchz.rs  mod.rs
src/downloader/: download.rs  mod.rs  unpack.rs
src/filesystem/: merge.rs  mod.rs  physical.rs  transition.rs
src/game/: component.rs  diff.rs  game_version.rs  hoyoverse_diffs.rs  integrity.rs  mod.rs  version.rs  voice_packages.rs
src/game/genshin/: component.rs  diff.rs  integrity.rs  mod.rs
src/game/genshin/api/: mod.rs  schema.rs
src/games/: mod.rs
src/games/genshin/: consts.rs  game.rs  mod.rs  repairer.rs  version_diff.rs
src/games/genshin/api/: mod.rs  schema.rs
src/games/genshin/linux_patch/: mod.rs  patch.rs  patches.rs
src/games/genshin/voice_data/: locale.rs  mod.rs  package.rs
src/games/honkai/: consts.rs  game.rs  mod.rs  repairer.rs  telemetry.rs  version_diff.rs
src/games/honkai/api/: mod.rs  schema.rs  schema_old.rs
src/games/honkai/linux_patch/: mfplat_patch.rs  mod.rs
src/games/pgr/: consts.rs  game.rs  mod.rs  repairer.rs  version_diff.rs
src/games/pgr/api/: mod.rs
src/games/pgr/api/game/: mod.rs  schema.rs
src/games/pgr/api/resource/: mod.rs
src/games/star_rail/: consts.rs  game.rs  mod.rs  repairer.rs  telemetry.rs  version_diff.rs
src/games/star_rail/api/: mod.rs  schema.rs
src/games/star_rail/linux_patch/: main_patch.rs  mod.rs  status.rs
src/games/star_rail/voice_data/: locale.rs  package.rs
src/games/wuwa/: consts.rs  game.rs  repairer.rs  telemetry.rs  version_diff.rs
src/games/wuwa/api/: mod.rs
src/games/wuwa/api/game/: mod.rs  schema.rs
src/games/wuwa/api/resource/: mod.rs  schema.rs
src/games/zzz/: consts.rs  game.rs  mod.rs  repairer.rs  telemetry.rs  version_diff.rs
src/games/zzz/api/: mod.rs
src/genshin/: consts.rs  game.rs  mod.rs  repairer.rs  telemetry.rs
src/genshin/api/: mod.rs  schema.rs
src/genshin/installer/: diff.rs  downloader.rs
src/genshin/json_schemas/: mod.rs  versions.rs
src/genshin/linux_patch/: applier.rs  mod.rs  patch.rs  patches.rs
src/genshin/linux_patch/patches/: mod.rs  unity_player_patch.rs  xlua_patch.rs
src/genshin/voice_data/: locale.rs  package.rs
src/honkai/: api.rs  consts.rs  game.rs  mod.rs  repairer.rs  telemetry.rs
src/honkai/json_schemas/: versions.rs
src/honkai/linux_patch/: main_patch.rs  mfplat_patch.rs  mod.rs  patch.rs  status.rs
src/installer/: archives.rs  diff.rs  downloader.rs  free_space.rs  installer.rs  mod.rs
src/json_schemas/: versions.rs
src/linux_patch/: applier.rs  mod.rs  patch.rs
src/network/: api.rs  mod.rs
src/network/downloader/: basic.rs  mod.rs
src/patches/: mod.rs
src/patches/dawn/: mod.rs  patch.rs  patches.rs  player_patch.rs
src/patches/jadeite/: metadata.rs  mod.rs
src/patches/mfc140/: mod.rs
src/patches/mfplat/: mod.rs
src/patches/vcrun2015/: mod.rs
src/sophon/: installer.rs  mod.rs  repairer.rs  updater.rs
src/sophon/api_schemas/: game_branches.rs  mod.rs  sophon_diff.rs  sophon_manifests.rs
src/sophon/protos/: SophonManifest.proto  SophonPatch.proto  mod.rs
src/tests/: archives.rs  mod.rs  test.tar.xz  version.rs
src/traits/: game.rs  git_sync.rs  mod.rs  version_diff.rs
src/voice_data/: locale.rs  package.rs
