[package]
name = "anime-game-core"
version = "2.0.0"
authors = ["Nikita Podvirnyy <krypt0nn@vk.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/an-anime-team/anime-game-core"
edition = "2021"

[features]
network = ["dep:minreq"]

default = ["network"]

[dev-dependencies]
blake3 = "1.5.0"

[dependencies]
flume = "0.11.0"
thiserror = "1.0"
lazy_static = "1.4.0"
tracing = "0.1"

stream-unpack = "1.0.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# network

minreq = { version = "2.11.0", features = ["json-using-serde", "proxy", "https"], optional = true }

# filesystem drivers

uuid = { version = "1.6.1", features = ["fast-rng"] }

md-5 = { version = "0.10.6", features = ["asm"] }
