[package]
name = "anime-game-core"
version = "1.28.0"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/an-anime-team/anime-game-core"
edition = "2021"

[dependencies]
minreq = { version = "2.12", features = ["json-using-serde", "https-rustls-probe", "proxy"] }
dns-lookup = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

fs_extra = "1.3.0"
cached = { version = "0.53", features = ["proc_macro"] }

anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
tracing = "0.1"
lazy_static = "1.5.0"

# Install feature
sysinfo = { version = "0.32", optional = true }
zip = { version = "2.1", optional = true }
tar = { version = "0.4", optional = true }
# sevenz-rust = { version = "0.2", optional = true }

# Compression types for tar
xz = { version = "0.1", optional = true }
bzip2 = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true } # TODO: check https://crates.io/crates/zune-inflate

# Linux patch feature
md-5 = { version = "0.10", features = ["asm"], optional = true }

# External feature
kinda-virtual-fs = { version = "0.1.1", optional = true }

# Amazing wuwa API
brotli-decompressor = { version = "4.0", optional = true }

[features]
genshin = []
star-rail = []
zzz = []
honkai = []
pgr = []
wuwa = ["dep:flate2", "dep:brotli-decompressor"]

install = [
    # Only genshin need it so perhaps I should
    # somehow disable this feature for other games?
    "external",

    "dep:sysinfo",

    "dep:zip",
    "dep:tar",

    "dep:xz",
    "dep:bzip2",
    "dep:flate2",

    "dep:md-5"
]

external = ["dep:kinda-virtual-fs"]

patches = []
patch-jadeite = []
patch-mfc140 = []
patch-vcrun2015 = []

all = [
    "install",
    "external",
    "patches"
]
