[package]
name = "anime-game-core"
version = "1.36.0"
authors = ["Nikita Podvirnyi <krypt0nn@vk.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/an-anime-team/anime-game-core"
edition = "2021"

[dependencies]
minreq = { version = "2.13", features = ["json-using-serde", "https-rustls-probe", "proxy"] }
dns-lookup = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

fs_extra = "1.3.0"
cached = { version = "0.55", features = ["proc_macro"] }

anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1.0"
tracing = "0.1"
lazy_static = "1.5.0"

# Install feature
sysinfo = { version = "0.35", optional = true, features = ["linux-netdevs"] }
zip = { version = "3.0", optional = true }
tar = { version = "0.4", optional = true }
# sevenz-rust = { version = "0.2", optional = true }

# Compression types for tar
xz = { version = "0.1", optional = true }
bzip2 = { version = "0.4", optional = true }
flate2 = { version = "1.0", optional = true } # TODO: check https://crates.io/crates/zune-inflate

# Linux patch feature
md-5 = { version = "0.10", features = ["asm"], optional = true }

# External feature
kinda-virtual-fs = { version = "0.1.1", optional = true }

# Needed for Sophon
zstd = { version = "0.13", optional = true }
reqwest = { version = "0.12", features = ["blocking", "h2", "http2", "json", "rustls-tls", "rustls-tls-webpki-roots", "socks"], default-features = false, optional = true }
protobuf = { version = "3.7", optional = true }
crossbeam-deque = { version = "0.8.6", optional = true }

[features]
genshin = []
star-rail = []
zzz = []
honkai = []
sophon = ["dep:md-5", "dep:zstd", "dep:reqwest", "dep:protobuf", "dep:protobuf-codegen", "dep:crossbeam-deque"]

install = [
    # Only genshin need it so perhaps I should
    # somehow disable this feature for other games?
    "external",

    "dep:sysinfo",

    "dep:zip",
    "dep:tar",

    "dep:xz",
    "dep:bzip2",
    "dep:flate2",

    "dep:md-5"
]

external = ["dep:kinda-virtual-fs"]

patches = []
patch-jadeite = []

all = [
    "install",
    "external",
    "patches",
    "sophon"
]

[build-dependencies]
protobuf-codegen = { version = "3.7.2", optional = true }
